--- a/aulas/calculadora/style.css
+++ b/aulas/calculadora/style.css
@@ -24,7 +24,6 @@
 			border-color: black;	
 			
 		}
-
 		.container{
 			margin: 0 auto;
 			height: 100% auto; 
@@ -52,4 +51,16 @@
 			font-family: Helvetica;
 			font-size: 20px;
 			
+		}
+		input{
+			font-size: 20px;
+			width: 20%;
+		}
+		select{
+			width: 80px;
+			font-size: 20px;
+		}
+		span{
+			font-size: 30px;
+			color: blue; 
 		}
