--- a/t1/css/join.css
+++ b/t1/css/join.css
@@ -35,43 +35,16 @@
 			background-color: black;	
 			
 		}
-		/*.conteudo {
-			width: 500px;
-			background-color: white;
-			text-align: left;
-
-		}*/
 		.containerCabecalho{
-			width: 100%;
+			margin-left: 10%;
+			width: 80%;
 			height: 200px;
 			background-color: green;
-		}
-		.esquerda{
-			float: left;
-			background-color: red;
-			width: 50%;
-			height: 100%;
-		}
-		.direita{
-			background-color: green;
-			float: right;
-			width: 50%;
-			height: 100%;
 		}
 		.containerTabuleiro{
 			background-color: yellow;
 			width: 80% auto;
 			height: 80%;
-		}
-		.nomeJogador1{
-			color: orange;
-			text-align: left;
-			font-size: 20px;
-		}
-		.nomeJogador2{
-			color: orange;
-			text-align: left;
-			font-size: 20px;
 		}
 		span{
 			float: none;
@@ -79,6 +52,18 @@
 			font-family: Helvetica;
 			font-size: 45px;
 			color: orange;
+		}
+		.topo{
+			width: 100% auto;
+			height: 10%;
+			margin-top: 5%;
+			margin-bottom: 5%;
+			float: none;
+			text-align: center;
+			font-family: Helvetica;
+			font-size: 20px;
+			color: orange;
+			background-color: black;	
 		}
 		.bloco1{
 			float: left;
@@ -194,6 +179,31 @@
 		    height: 160px;
     		border: none;
 		}
+		.txtinput{
+			width: 30%;
+			color: orange;
+			text-align: center;
+			font-size: 20px;
+			background-color: black;
+			border-color: orange;
+			border-width: 5px;
+			border-style: outset;
+		}
+		.btnOK{
+			width: 30%;
+			background-color: orange;
+		    cursor: pointer;
+		    color: black;
+    		border: none;
+		}
+		#textoInfo{
+			margin-top: 50%;
+			color: orange;
+			font-size: 15px;
+		}
+		.formLogin{
+			text-align: center;
+		}
 		/*
 #myDIV
 {
@@ -206,7 +216,19 @@ transform:rotateZ(45deg);
 
 
 
-		
+		.esquerda{
+			float: left;
+			background-color: red;
+			width: 512px;
+			height: 50px;
+		}
+		.direita{
+			text-align: center;
+			background-color: green;
+			float: right;
+			width: 256px;
+			height: 50px;
+		}
 		.menuBar{
 			background-color: yellow;
 			margin: 0 auto;
