--- a/t1/css/jogo.css
+++ b/t1/css/jogo.css
@@ -48,18 +48,19 @@
 		}
 		.esquerda{
 			float: left;
-			background-color: red;
+			background-color: black;
 			width: 50%;
 			height: 100%;
 		}
 		.direita{
-			background-color: green;
+			background-color: black;
 			float: right;
 			width: 50%;
 			height: 100%;
 		}
 		.containerTabuleiro{
-			background-color: yellow;
+			margin-left: 5%;
+			background-color: black;
 			width: 80% auto;
 			height: 80%;
 		}
@@ -72,6 +73,15 @@
 			color: orange;
 			text-align: left;
 			font-size: 20px;
+		}
+		.subCabecalho{
+			float: left;
+			width: 100%;
+			height: 50px;
+			background-color: black;
+			border-bottom: 1px;
+			border-color: orange;
+			border-bottom-style: outset;
 		}
 		span{
 			float: none;
