corrigido problema avatar, teste final 1

--- a/t1/css/jogo.css
+++ b/t1/css/jogo.css
@@ -1,3 +1,9 @@
+/****************************************************
+*Layout da pagina de partida do jogo da velha		*
+*Rodrigo Bueno Tomiosso - rodrigobt20@gmail.com 	*
+*													*
+*													*
+****************************************************/
 		body {
 			text-align: center;
 			padding: 0px;
