--- a/t1/css/jogo.css
+++ b/t1/css/jogo.css
@@ -1,7 +1,7 @@
 /****************************************************
 *Layout da pagina de partida do jogo da velha		*
 *Rodrigo Bueno Tomiosso - rodrigobt20@gmail.com 	*
-*													*
+*Andrey B. Ramos - andreybramos@hotmail.com			*
 *													*
 ****************************************************/
 		body {
